# technoeconomics

./: .gitignore  .pre-commit-config.yaml  IDEA.md  LICENSE  NOTES.md  README.md  _typos.toml  main.py  pyproject.toml  pypsa_scratchpad.py  zensical.toml
docs/: development.md  getting-started.md
docs/concepts/: index.md
docs/javascripts/: mathjax.js
docs/reference/: index.md
src/technoeconomics/web/: main.py
src/technoeconomics/web/templates/: about.jinja  base.jinja  index.jinja
