[project]
name = "technoeconomics-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlite",
    "notebook>=7.5.7",
    "pypsa>=1.2.2",
    "ty[dev]>=0.0.48",
]

[tool.uv.sources]
atlite = {git = "https://github.com/mrmorawski/atlite.git", branch="era5-ncar-thredds"}
